# svarna-ledger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agent/workflows/: serve-website.md
.github/workflows/: pages.yml  scrape.yml
docs/: app.js  config.js  config.js.example  index.html  styles.css
docs/data/: gold_prices.json
scraper/: db.py  pyproject.toml  scrape_gold.py
scripts/: backfill_prices.py
scripts/backfill-prices/: backfill_prices.py  env.example  gold_prices_seed.json  migrate_gold_prices_to_supabase.py  pyproject.toml
scripts/backfill-prices/migrations/: 001_gold_prices.sql
site/: app.js  index.html  styles.css
