[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svarna-ledger-scraper"
version = "0.1.0"
description = "Gold price scraper for Svarna Ledger"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "selenium",
    "supabase>=2.30.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]

[tool.setuptools.packages.find]
where = [".."]
include = ["scraper*"]
exclude = ["data*", "docs*", "scripts*"]
